--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
-    "node-cron": "^3.0.3"
+    "mailtrap": "^3.4.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
